Server: HTML input fields->JSON-file

--- a/View/frontpage.html
+++ b/View/frontpage.html
@@ -60,7 +60,7 @@
 <button onclick="match()">Check for matches</button>
 <p id="match"></p>
 
-    <!--test, push to developer branch-->
+    <!--test, push to developer branch. Suceeded;)-->
 </body>
 
 </html>
